--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
                             <h2>Career Planning Assistant</h2>
-                            <h4>Flower Classification System Based on Deep Learning</h4>
+                            <h4>Help you find a better career future!</h4>
                             <hr class="star-primary">
                             <img class="img-fluid img-centered img-rounded" src="images/portfolio/career_assistant/career_assistant1.png" alt="">
                             <img class="img-fluid img-centered img-rounded" src="images/portfolio/career_assistant/career_assistant2.png" alt="">
@@ -408,24 +408,14 @@
                             <img class="img-fluid img-centered img-rounded" src="images/portfolio/career_assistant/career_assistant4.png" alt="">
                             <img class="img-fluid img-centered img-rounded" src="images/portfolio/career_assistant/career_assistant5.png" alt="">
                             <img class="img-fluid img-centered img-rounded" src="images/portfolio/career_assistant/career_assistant6.png" alt="">
-                            <p>Flowergraph is a website which can recognize 30 kinds of flower pictures which users upload. I used 6,060 pictures to retrain Inception v4 Convolutional Neural Networks in TF-slim framework.
-                                The main method to retrain the model is transfer learning. The accuracy of classification was 93.25% using 10-fold cross validation.
+                            <p>This system can Recommend suitable career planning to users.It recommend what skills users should learn,
+                                According to user's background, we give them a total score and predict the salary for them in the next few years.
+                                Meanwhile we recommend some excellent people who have similar background with them.
                             <ul class="list-inline item-details">
-                                <li>Source:
+                                <li>
                                     <strong>
                                         <a href="https://github.com/lovolLiu/BigCreate">View in Github</a>
                                     </strong>
-                                </li>
-                                <li>Date:
-                                    <strong>
-                                        <a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
-                                </li>
-                                <li>Service:
-                                    <strong>
-                                        <a href="http://startbootstrap.com">Web Development</a>
-                                    </strong>
-                                </li>
                             </ul>
                             <button class="btn btn-success" type="button" data-dismiss="modal">
                                 <i class="fa fa-times"></i>
@@ -460,24 +450,23 @@
                             <img class="img-fluid img-centered img-rounded" src="images/portfolio/Posture_Detection/Posture_Detection4.png" alt="">
                             <img class="img-fluid img-centered img-rounded" src="images/portfolio/Posture_Detection/Posture_Detection5.png" alt="">
                             <img class="img-fluid img-centered img-rounded" src="images/portfolio/Posture_Detection/career_assistant6.png" alt="">
-                            <p>Flowergraph is a website which can recognize 30 kinds of flower pictures which users upload. I used 6,060 pictures to retrain Inception v4 Convolutional Neural Networks in TF-slim framework.
-                                The main method to retrain the model is transfer learning. The accuracy of classification was 93.25% using 10-fold cross validation.
+                            <p>Sitting posture detection is helpful for preventing musculoskeletal disorders.
+                                With the development of motion-sensing camera and relative software development kit(SDK),
+                                it is possible to implement an application using skeleton detecting technology.
+                                In this project, we excoriated Skeleton thinning algorithm and Averaging process to detect sitting posture from a lateral view without disturbing the user.
+                                The results show this method has high accuracy when detecting improper sitting postures.
                             <ul class="list-inline item-details">
-                                <li>Client:
+                                <li>
                                     <strong>
-                                        <a href="http://startbootstrap.com">Start Bootstrap</a>
+                                        <a href="http://startbootstrap.com">View in Github</a>
                                     </strong>
                                 </li>
-                                <li>Date:
-                                    <strong>
-                                        <a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
-                                </li>
-                                <li>Service:
-                                    <strong>
-                                        <a href="http://startbootstrap.com">Web Development</a>
-                                    </strong>
-                                </li>
+                            <li>
+                                <strong>
+                                    <a href="http://startbootstrap.com">View Paper</a>
+                                </strong>
+                            </li>
+
                             </ul>
                             <button class="btn btn-success" type="button" data-dismiss="modal">
                                 <i class="fa fa-times"></i>
@@ -512,22 +501,12 @@
                             <img class="img-fluid img-centered img-rounded" src="images/portfolio/bookstore/bookstore5.png" alt="">
                             <img class="img-fluid img-centered img-rounded"  src="images/portfolio/bookstore/bookstore7.png" alt="">
                             <img class="img-fluid img-centered img-rounded" src="images/portfolio/bookstore/bookstore8.png" alt="">
-                            <p>Flowergraph is a website which can recognize 30 kinds of flower pictures which users upload. I used 6,060 pictures to retrain Inception v4 Convolutional Neural Networks in TF-slim framework.
-                                The main method to retrain the model is transfer learning. The accuracy of classification was 93.25% using 10-fold cross validation.
+                            <p>An online bookstore based on SSH (Struts/Spring/Hibernate) framework which contains functions including logging in,
+                                purchasing books online, managing the information of users and so on.
                             <ul class="list-inline item-details">
-                                <li>Source:
+                                <li>
                                     <strong>
                                         <a href="https://github.com/lovolLiu/bookstore">View in Github</a>
-                                    </strong>
-                                </li>
-                                <li>Date:
-                                    <strong>
-                                        <a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
-                                </li>
-                                <li>Service:
-                                    <strong>
-                                        <a href="http://startbootstrap.com">Web Development</a>
                                     </strong>
                                 </li>
                             </ul>
@@ -571,16 +550,6 @@
                                         <a href="http://startbootstrap.com">Start Bootstrap</a>
                                     </strong>
                                 </li>
-                                <li>Date:
-                                    <strong>
-                                        <a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
-                                </li>
-                                <li>Service:
-                                    <strong>
-                                        <a href="http://startbootstrap.com">Web Development</a>
-                                    </strong>
-                                </li>
                             </ul>
                             <button class="btn btn-success" type="button" data-dismiss="modal">
                                 <i class="fa fa-times"></i>
@@ -618,22 +587,14 @@
                             <img class="img-fluid img-centered img-rounded" src="images/portfolio/customer_service/Customer_service7.png" alt="">
                             <img class="img-fluid img-centered img-rounded" src="images/portfolio/customer_service/Customer_service8.png" alt="">
                             <img class="img-fluid img-centered img-rounded" src="images/portfolio/customer_service/Customer_service9.png" alt="">
-                            <p>Flowergraph is a website which can recognize 30 kinds of flower pictures which users upload. I used 6,060 pictures to retrain Inception v4 Convolutional Neural Networks in TF-slim framework.
-                                The main method to retrain the model is transfer learning. The accuracy of classification was 93.25% using 10-fold cross validation.
+                            <p>This project is to develop an Online Customer Service System for Chinese Southern Airlines by
+                                applying Websocket to the communication between server side and client side.
+                                And I implemented the load balancing by the time a new customer is connected to the system and
+                                assigned it to the customer service that connects to the smallest number of customers.
                             <ul class="list-inline item-details">
-                                <li>Client:
+                                <li>
                                     <strong>
-                                        <a href="http://startbootstrap.com">Start Bootstrap</a>
-                                    </strong>
-                                </li>
-                                <li>Date:
-                                    <strong>
-                                        <a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
-                                </li>
-                                <li>Service:
-                                    <strong>
-                                        <a href="http://startbootstrap.com">Web Development</a>
+                                        <a href="http://startbootstrap.com">View in Github</a>
                                     </strong>
                                 </li>
                             </ul>
