--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
                                 </li>
                             <li>
                                 <strong>
-                                    <a href="http://startbootstrap.com">View Paper</a>
+                                    <a href="Paper.pdf">View Paper</a>
                                 </strong>
                             </li>
 
