Add work experience

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Xintong (Cathy) Liu 's Home Page</title>
+    <title>Xintong／Cathy Liu 's Home Page</title>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta name="description" content="Personal Portfolio HTML Template">
     <meta name="keywords" content="Personal, Portfolio, HTML Template, Freelancer">
@@ -96,9 +96,9 @@
 
             <div class="col-md-5 col-sm-6">
                 <div class="wow fadeInUp about-text" data-wow-delay="0.4s">
-                    <h2>Hello, that's me!</h2>
+                    <h2>Hey, that's me!</h2>
                     <div>
-                        <h4 class="font-playfair">I'm Xintong(Cathy) LIU. I'm pursuing a Master's degree of <strong>Computer Science</strong> in <strong>USC.
+                        <h4 class="font-playfair">I'm Xintong/Cathy LIU. I'm pursuing a Master's degree of <strong>Computer Science</strong> in <strong>USC.
                            </strong></h4>
                         <h4 class="font-playfair">I finished my Bachelor degree of Software Engineering in Beijing University of Posts and Telecommunications.</h4>
                         <h4 class="font-playfair">I have great passion on back-end development and data mining.</h4>
@@ -108,7 +108,7 @@
 
             <div class="col-md-offset-1 col-md-6 col-sm-6">
                 <!-- ABOUT IMAGE HERE -->
-                <div class="wow fadeInUp about-image" data-wow-delay="0.8s">
+                <div class="wow fadeInUp about-image" data-wow-delay="0.6s">
                     <img src="images/about-img.jpg" class="img-responsive" alt="">
                     <h4><span class="font-playfair">     Xin</span>tong - Creative Software Engineer <span
                             style="text-decoration:line-through;"></span></h4>
@@ -128,34 +128,30 @@
             <div class="col-md-12 col-sm-12">
                 <!-- SECTION TITLE -->
                 <div class="section-title">
-                    <h2>what i do.</h2>
+                    <h2>who I have worked for.</h2>
                 </div>
             </div>
 
             <div class="wow fadeInUp col-md-4 col-sm-6" data-wow-delay="0.4s">
                 <!-- SERVICE THUMB -->
                 <div class="service-thumb">
-                    <i class="fa fa-rocket"></i>
-                    <h4 class="font-playfair">Brand Identity</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit assumenda.</p>
+                   <!-- <i class="fa fa-rocket"></i>-->
+                    <a href= "https://www.genedock.com/" >
+                        <img class="img-fluid img-rounded" src="images/portfolio/Company/Genedock.png" alt=""  >
+                    </a>
+                    <h4 class="font-playfair">GeneDock</h4>
+                    <p>Worked as a software engineer intern</p>
                 </div>
             </div>
 
             <div class="wow fadeInUp col-md-4 col-sm-6" data-wow-delay="0.6s">
                 <!-- SERVICE THUMB -->
                 <div class="service-thumb">
-                    <i class="fa fa-clone"></i>
-                    <h4 class="font-playfair">Web Design</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit assumenda.</p>
-                </div>
-            </div>
-
-            <div class="wow fadeInUp col-md-4 col-sm-6" data-wow-delay="0.8s">
-                <!-- SERVICE THUMB -->
-                <div class="service-thumb">
-                    <i class="fa fa-bookmark-o"></i>
-                    <h4 class="font-playfair">Frontend Development</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit assumenda.</p>
+                    <a href= "https://www.youtube.com/watch?v=NFFC3nOLSQ0" >
+                        <img class="img-fluid img-rounded" src="images/portfolio/Company/RoboTutor.png" alt=""  >
+                    </a>
+                    <h4 class="font-playfair">The Robotics Institute of CMU</h4>
+                    <p>Team member of RoboTutor to develop an open-source Android Application and supervisor for five students in CMU</p>
                 </div>
             </div>
 
@@ -262,6 +258,10 @@
 </section>
 
 
+
+
+
+
 <!-- Contact Section -->
 <section id="contact" class="parallax-section">
     <div class="container">
@@ -320,13 +320,14 @@
 
             <div class="col-md-23 col-sm-23">
                 <div class="wow fadeInUp footer-copyright" data-wow-delay="0.2s">
-                    <p class="font-playfair">© 2016 Cathy Liu All Rights Reserved.</p>
+                    <p class="font-playfair">© 2017 Cathy Liu All Rights Reserved.</p>
                 </div>
                 <!-- SOCIAL ICONS -->
                 <ul class="social-icon">
-                    <li class="wow fadeInUp" data-wow-delay="0.4s"><a href="#" class="fa fa-twitter"></a></li>
-                    <li class="wow fadeInUp" data-wow-delay="0.6s"><a href="#" class="fa fa-dribbble"></a></li>
-                    <li class="wow fadeInUp" data-wow-delay="0.8s"><a href="#" class="fa fa-linkedin"></a></li>
+                    <li class="wow fadeInUp" data-wow-delay="0.2s"><a href="mailto:liuxintongnice@gmail.com" class="fa fa-envelope"></a></li>
+                    <li class="wow fadeInUp" data-wow-delay="0.4s"><a href="https://www.facebook.com/xintong.liu.5496" class="fa fa-facebook-square"></a></li>
+                    <li class="wow fadeInUp" data-wow-delay="0.6s"><a href="https://www.linkedin.com/in/xintong-liu-a2a44b119/" class="fa fa-linkedin"></a></li>
+                    <li class="wow fadeInUp" data-wow-delay="0.8s"><a href="https://github.com/lovolLiu" class="fa fa-github"></a></li>
                 </ul>
             </div>
 
@@ -356,22 +357,12 @@
                             <img class="img-fluid img-centered img-rounded" src="images/portfolio/flowergraph/flowergraph4.png" alt="">
                             <img class="img-fluid img-centered img-rounded" src="images/portfolio/flowergraph/flowergraph5.png" alt="">
                             <img class="img-fluid img-centered img-rounded" src="images/portfolio/flowergraph/flowergraph6.png" alt="">
-                            <p>Flowergraph is a website which can recognize 30 kinds of flower pictures which users upload. I used 6,060 pictures to retrain Inception v4 Convolutional Neural Networks in TF-slim framework.
+                            <p>Flowergraph is a website which can recognize 30 kinds of flower pictures which users upload. I retrained Inception v4 Convolutional Neural Networks in TF-slim framework.
                                The main method to retrain the model is transfer learning. The accuracy of classification was 93.25% using 10-fold cross validation.
                             <ul class="list-inline item-details">
-                                <li>Source:
+                                <li>
                                     <strong>
                                         <a href="https://github.com/lovolLiu/Indentify_Flowers">View in Github</a>
-                                    </strong>
-                                </li>
-                                <li>Date:
-                                    <strong>
-                                        <a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
-                                </li>
-                                <li>Service:
-                                    <strong>
-                                        <a href="http://startbootstrap.com">Web Development</a>
                                     </strong>
                                 </li>
                             </ul>
@@ -399,8 +390,8 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Career Planning Assistant</h2>
-                            <h4>Help you find a better career future!</h4>
+                            <h2>FunJob</h2>
+                            <h4>Career Planning Assistant Based on Big Data Sample</h4>
                             <hr class="star-primary">
                             <img class="img-fluid img-centered img-rounded" src="images/portfolio/career_assistant/career_assistant1.png" alt="">
                             <img class="img-fluid img-centered img-rounded" src="images/portfolio/career_assistant/career_assistant2.png" alt="">
@@ -458,7 +449,7 @@
                             <ul class="list-inline item-details">
                                 <li>
                                     <strong>
-                                        <a href="http://startbootstrap.com">View in Github</a>
+                                        <a href="https://github.com/lovolLiu/Sitting-Posture-Detection-System">View in Github</a>
                                     </strong>
                                 </li>
                             <li>
@@ -492,7 +483,7 @@
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
                             <h2>BookAholic </h2>
-                            <h4>Online Bookstore</h4>
+                            <h4>B2C Online Bookstore</h4>
                             <hr class="star-primary">
                             <img class="img-fluid img-centered img-rounded" src="images/portfolio/bookstore/bookstore1.png" alt="">
                             <img class="img-fluid img-centered img-rounded" src="images/portfolio/bookstore/bookstore2.png" alt="">
@@ -534,7 +525,7 @@
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
                             <h2>Vapor </h2>
-                            <h4>Game Platform</h4>
+                            <h4>Online Game Platform</h4>
                             <hr class="star-primary">
                             <img class="img-fluid img-centered img-rounded" src="images/portfolio/Vapor/Vapor1.png" alt="">
                             <img class="img-fluid img-centered img-rounded" src="images/portfolio/Vapor/Vapor2.png" alt="">
@@ -542,12 +533,11 @@
                             <img class="img-fluid img-centered img-rounded" src="images/portfolio/Vapor/Vapor4.png" alt="">
                             <img class="img-fluid img-centered img-rounded" src="images/portfolio/Vapor/Vapor5.png" alt="">
                             <img class="img-fluid img-centered img-rounded" src="images/portfolio/Vapor/Vapor6.png" alt="">
-                            <p>Flowergraph is a website which can recognize 30 kinds of flower pictures which users upload. I used 6,060 pictures to retrain Inception v4 Convolutional Neural Networks in TF-slim framework.
-                                The main method to retrain the model is transfer learning. The accuracy of classification was 93.25% using 10-fold cross validation.
+                            <p>
                             <ul class="list-inline item-details">
-                                <li>Client:
+                                <li>
                                     <strong>
-                                        <a href="http://startbootstrap.com">Start Bootstrap</a>
+                                        <a href="https://github.com/lovolLiu/Vapor">View in Github</a>
                                     </strong>
                                 </li>
                             </ul>
@@ -575,8 +565,8 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Vapor </h2>
-                            <h4>Game Platform</h4>
+                            <h2>Online Customer Service System</h2>
+                            <h4> Online Customer Service System for Chinese Southern Airlines  </h4>
                             <hr class="star-primary">
                             <img class="img-fluid img-centered img-rounded" src="images/portfolio/customer_service/Customer_service1.png" alt="">
                             <img class="img-fluid img-centered img-rounded" src="images/portfolio/customer_service/Customer_service2.png" alt="">
@@ -589,8 +579,6 @@
                             <img class="img-fluid img-centered img-rounded" src="images/portfolio/customer_service/Customer_service9.png" alt="">
                             <p>This project is to develop an Online Customer Service System for Chinese Southern Airlines by
                                 applying Websocket to the communication between server side and client side.
-                                And I implemented the load balancing by the time a new customer is connected to the system and
-                                assigned it to the customer service that connects to the smallest number of customers.
                             <ul class="list-inline item-details">
                                 <li>
                                     <strong>
