--- a/index.html
+++ b/index.html
@@ -328,6 +328,7 @@
                     <li class="wow fadeInUp" data-wow-delay="0.4s"><a href="https://www.facebook.com/xintong.liu.5496" class="fa fa-facebook-square"></a></li>
                     <li class="wow fadeInUp" data-wow-delay="0.6s"><a href="https://www.linkedin.com/in/xintong-liu-a2a44b119/" class="fa fa-linkedin"></a></li>
                     <li class="wow fadeInUp" data-wow-delay="0.8s"><a href="https://github.com/lovolLiu" class="fa fa-github"></a></li>
+                    <li class="wow fadeInUp" data-wow-delay="1.0s"><a href="https://www.instagram.com/cathy_liu1995/?hl=en" class="fa fa-instagram"></a></li>
                 </ul>
             </div>
 
