Add video to flowergrafy

--- a/index.html
+++ b/index.html
@@ -358,9 +358,22 @@
                 <div class="row">
                     <div class="col-lg-10 col-lg-offset-1">
                         <div class="modal-body">
-                            <h2>Flowergraphy</h2>
+                            <h2>Flowergrafy</h2>
                             <h4>Flower Classification System Based on Deep Learning</h4>
                             <hr class="star-primary">
+                            <p class = "project-intro">Flowergrafy is a website which can recognize <b><span class="highlight-words">30 </span></b>kinds of flower pictures  which users
+                                upload. I retrained <b><span class="highlight-words">Inception v4 </span></b> Convolutional Neural Networksin <b><span class="highlight-words">TF-slim framework</span></b>.
+                                The main method to retrain the model is transfer learning. The accuracy of
+                                classification was <b><span class="highlight-words">93.25%</span></b> using 10-fold cross validation.
+                            </p><br/>
+                            <h3><b>Video Demo</b></h3>
+                            <iframe width="660" height="415" src="https://www.youtube.com/embed/FFoE4hxS52Y"
+                                        frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+
+                            </iframe>
+                            <br/><br/><br/>
+                            <h3><b>Image Gallery</b></h3>
+                            <br/><br/>
                             <img class="img-fluid img-centered img-rounded"
                                  src="images/portfolio/flowergraph/flowergraph1.png" alt="">
                             <img class="img-fluid img-centered img-rounded"
@@ -373,10 +386,9 @@
                                  src="images/portfolio/flowergraph/flowergraph5.png" alt="">
                             <img class="img-fluid img-centered img-rounded"
                                  src="images/portfolio/flowergraph/flowergraph6.png" alt="">
-                            <p>Flowergraph is a website which can recognize 30 kinds of flower pictures which users
-                                upload. I retrained Inception v4 Convolutional Neural Networks in TF-slim framework.
-                                The main method to retrain the model is transfer learning. The accuracy of
-                                classification was 93.25% using 10-fold cross validation.
+                            <img class="img-fluid img-centered img-rounded"
+                                 src="images/portfolio/flowergraph/flowergraph7.png" alt="">
+
                             <ul class="list-inline item-details">
                                 <li>
                                     <strong>
