Update the width of the video of flowergrafy

--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
                                 classification was <b><span class="highlight-words">93.25%</span></b> using 10-fold cross validation.
                             </p><br/>
                             <h3><b>Video Demo</b></h3>
-                            <iframe width="660" height="415" src="https://www.youtube.com/embed/FFoE4hxS52Y"
+                            <iframe width="80%" height="415" src="https://www.youtube.com/embed/FFoE4hxS52Y"
                                         frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 
                             </iframe>
